--- a/Colab_Notebooks/ML_Simple_Linear_Regression.ipynb
+++ b/Colab_Notebooks/ML_Simple_Linear_Regression.ipynb
@@ -152,6 +152,7 @@
         "# Load the dataset from CSV file\n",
         "df = pd.read_csv('marketing_sales.csv')\n",
         "\n",
+        "# You can find the data set here https://github.com/sjasthi/Python-DS-Data-Science/blob/main/datasets/marketing_sales.csv\n",
         "# Alternatively, you can load from Excel:\n",
         "# df = pd.read_excel('marketing_sales.xlsx')\n",
         "\n",
@@ -775,3 +776,4 @@
     }
   ]
 }
+
